compiler/tests/fail/slh/x86-64/function_kills_msf_1.jazz
fn f() {
    reg u64 x;
    x = 0;
    if (x == 0) {}
}

export
fn main(reg u64 x) {
    reg u64 msf;
    msf = #init_msf();
    f();
    x = #protect(x, msf);
    [x] = 0;
}
